Added authorization in swagger
